--- a/index.html
+++ b/index.html
@@ -35,15 +35,48 @@
     </style>
   </head>
   <body>
-    How many team members can I invite? You can invite up to 2 additional users
-    on the Free plan. There is no limit on team members for the Premium plan.
-    What is the maximum file upload size? No more than 2GB. All files in your
-    account must fit your allotted storage space. How do I reset my password?
-    Click “Forgot password” from the login page or “Change password” from your
-    profile page. A reset link will be emailed to you. Can I cancel my
-    subscription? Yes! Send us a message and we’ll process your request no
-    questions asked. Do you provide additional support? Chat and email support
-    is available 24/7. Phone lines are open during normal business hours.
+    <main class="card-container">
+      <div class="card">
+        <section class="faq">
+          <h1 class="faq-heading">FAQ</h1>
+          <div class="faq-instance">
+            <p class="question">How many team members can I invite?</p>
+            <p class="answer">
+              You can invite up to 2 additional users on the Free plan. There is
+              no limit on team members for the Premium plan.
+            </p>
+          </div>
+          <div class="faq-instance">
+            <p class="question">What is the maximum file upload size?</p>
+            <p class="answer">
+              No more than 2GB. All files in your account must fit your allotted
+              storage space.
+            </p>
+          </div>
+          <div class="faq-instance">
+            <p class="question">How do I reset my password?</p>
+            <p class="answer">
+              Click “Forgot password” from the login page or “Change password”
+              from your profile page. A reset link will be emailed to you.
+            </p>
+          </div>
+          <div class="faq-instance">
+            <p class="question">Can I cancel my subscription?</p>
+            <p class="answer">
+              Yes! Send us a message and we’ll process your request no questions
+              asked.
+            </p>
+          </div>
+          <div class="faq-instance">
+            <p class="question">Do you provide additional support?</p>
+            <p class="answer">
+              Chat and email support is available 24/7. Phone lines are open
+              during normal business hours.
+            </p>
+          </div>
+        </section>
+      </div>
+    </main>
 
     <footer>
       <div class="attribution">
