--- a/index.html
+++ b/index.html
@@ -38,42 +38,67 @@
     <main class="card-container">
       <div class="card">
         <section class="faq">
-          <h1 class="faq-heading">FAQ</h1>
-          <div class="faq-instance">
-            <p class="question">How many team members can I invite?</p>
+          <h1 class="faq-heading u-margin-medium">FAQ</h1>
+          <div class="faq-instance u-margin-small">
+            <input type="checkbox" name="" id="q1" class="checkbox-hidden" />
+
+            <label for="q1"
+              ><p class="question">
+                How many team members can I invite?
+              </p></label
+            >
             <p class="answer">
               You can invite up to 2 additional users on the Free plan. There is
               no limit on team members for the Premium plan.
             </p>
           </div>
-          <div class="faq-instance">
-            <p class="question">What is the maximum file upload size?</p>
+          <hr class="u-margin-small" />
+          <div class="faq-instance u-margin-small">
+            <input type="checkbox" name="" id="q2" class="checkbox-hidden" />
+            <label for="q2"
+              ><p class="question">
+                What is the maximum file upload size?
+              </p></label
+            >
             <p class="answer">
               No more than 2GB. All files in your account must fit your allotted
               storage space.
             </p>
           </div>
-          <div class="faq-instance">
-            <p class="question">How do I reset my password?</p>
+          <hr class="u-margin-small" />
+          <div class="faq-instance u-margin-small">
+            <input type="checkbox" name="" id="q3" class="checkbox-hidden" />
+            <label for="q3"
+              ><p class="question">How do I reset my password?</p></label
+            >
             <p class="answer">
               Click “Forgot password” from the login page or “Change password”
               from your profile page. A reset link will be emailed to you.
             </p>
           </div>
-          <div class="faq-instance">
-            <p class="question">Can I cancel my subscription?</p>
+          <hr class="u-margin-small" />
+          <div class="faq-instance u-margin-small">
+            <input type="checkbox" name="" id="q4" class="checkbox-hidden" />
+            <label for="q4">
+              <p class="question">Can I cancel my subscription?</p>
+            </label>
             <p class="answer">
               Yes! Send us a message and we’ll process your request no questions
               asked.
             </p>
           </div>
-          <div class="faq-instance">
-            <p class="question">Do you provide additional support?</p>
+          <hr class="u-margin-small" />
+          <div class="faq-instance u-margin-small">
+            <input type="checkbox" name="" id="q5" class="checkbox-hidden" />
+            <label for="q5"
+              ><p class="question">Do you provide additional support?</p></label
+            >
             <p class="answer">
               Chat and email support is available 24/7. Phone lines are open
               during normal business hours.
             </p>
           </div>
+          <hr />
         </section>
       </div>
     </main>
