--- a/index.html
+++ b/index.html
@@ -40,13 +40,16 @@
         <section class="faq">
           <h1 class="faq-heading u-margin-medium">FAQ</h1>
           <div class="faq-instance u-margin-small">
-            <input type="checkbox" name="" id="q1" class="checkbox-hidden" />
+            <input
+              type="checkbox"
+              name="Question 1"
+              id="q1"
+              class="checkbox-hidden"
+            />
 
-            <label for="q1"
-              ><p class="question">
-                How many team members can I invite?
-              </p></label
-            >
+            <label for="q1" class="question">
+              How many team members can I invite?
+            </label>
             <p class="answer">
               You can invite up to 2 additional users on the Free plan. There is
               no limit on team members for the Premium plan.
@@ -54,12 +57,15 @@
           </div>
           <hr class="u-margin-small" />
           <div class="faq-instance u-margin-small">
-            <input type="checkbox" name="" id="q2" class="checkbox-hidden" />
-            <label for="q2"
-              ><p class="question">
-                What is the maximum file upload size?
-              </p></label
-            >
+            <input
+              type="checkbox"
+              name="Question 2"
+              id="q2"
+              class="checkbox-hidden"
+            />
+            <label for="q2" class="question">
+              What is the maximum file upload size?
+            </label>
             <p class="answer">
               No more than 2GB. All files in your account must fit your allotted
               storage space.
@@ -67,10 +73,16 @@
           </div>
           <hr class="u-margin-small" />
           <div class="faq-instance u-margin-small">
-            <input type="checkbox" name="" id="q3" class="checkbox-hidden" />
-            <label for="q3"
-              ><p class="question">How do I reset my password?</p></label
+            <input
+              type="checkbox"
+              name="Question 3"
+              id="q3"
+              class="checkbox-hidden"
+            />
+            <label for="q3" class="question"
+              >How do I reset my password?</label
             >
+
             <p class="answer">
               Click “Forgot password” from the login page or “Change password”
               from your profile page. A reset link will be emailed to you.
@@ -78,9 +90,14 @@
           </div>
           <hr class="u-margin-small" />
           <div class="faq-instance u-margin-small">
-            <input type="checkbox" name="" id="q4" class="checkbox-hidden" />
-            <label for="q4">
-              <p class="question">Can I cancel my subscription?</p>
+            <input
+              type="checkbox"
+              name="Question 4"
+              id="q4"
+              class="checkbox-hidden"
+            />
+            <label for="q4" class="question">
+              Can I cancel my subscription?
             </label>
             <p class="answer">
               Yes! Send us a message and we’ll process your request no questions
@@ -89,9 +106,14 @@
           </div>
           <hr class="u-margin-small" />
           <div class="faq-instance u-margin-small">
-            <input type="checkbox" name="" id="q5" class="checkbox-hidden" />
-            <label for="q5"
-              ><p class="question">Do you provide additional support?</p></label
+            <input
+              type="checkbox"
+              name="Question 5"
+              id="q5"
+              class="checkbox-hidden"
+            />
+            <label for="q5" class="question">
+              Do you provide additional support?</label
             >
             <p class="answer">
               Chat and email support is available 24/7. Phone lines are open
